Creación de proyecto

--- a/Application.Tellodent/appsettings.json
+++ b/Application.Tellodent/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=CARLOSPC;Initial Catalog = TELLODENTBD;User Id=sa;Password=05E54CA5DD"
+    "SqlConnection": "Data Source=CARLOSPC;Initial Catalog = TELLODENTBD;"
   }
 }
