--- a/Application.Tellodent/appsettings.json
+++ b/Application.Tellodent/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=CARLOSPC;Initial Catalog = TELLODENTBD;"
+    "SqlConnection": "Data Source=CARLOSPC;Initial Catalog = TellodentDB;user id=miusuario;password=tellodent1234@"
   }
 }
