Se agregó el inicio de sesión.

--- a/Application.Tellodent/appsettings.json
+++ b/Application.Tellodent/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=CARLOSPC;Initial Catalog = TellodentDB;user id=miusuario;password=tellodent1234@"
+    "SqlConnection": "Data Source=CARLOSPC;Initial Catalog = TELLODENTDB;user id=sa;password=asdas"
   }
 }
