feliz año nuevo

--- a/Application.Tellodent/appsettings.json
+++ b/Application.Tellodent/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=CARLOSPC;Initial Catalog = TELLODENTDB;user id=sa;password=asdas"
+    "SqlConnection": "Data Source=DESKTOP-5PF1LP8;Initial Catalog = clinica3;integrated security=true"
   }
 }
