--- a/Application.Tellodent/appsettings.json
+++ b/Application.Tellodent/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=localhost;Initial Catalog=fisident;TrustServerCertificate=True;Encrypt=False;Integrated Security=SSPI"
+    "SqlConnection": "Data Source=DESKTOP-5PF1LP8;Initial Catalog=fisident;TrustServerCertificate=True;Encrypt=False;Integrated Security=true"
     //"SqlConnection": "Data Source=donomarfisig6.database.windows.net;Initial Catalog = appdentalbd;user id=miusuario;password=Tellodent1234@"
   }
 }
